# askbot

./: Cargo.toml  LICENSE  README.md  Rocket.toml  config.json  make_index.sh  testconfig.json
src/: generate.rs  main.rs  web.rs
web/: elm.json
web/src/: Alert.elm  Error.elm  Main.elm  Message.elm  Requests.elm  Settings.elm  Tag.elm
