[package]
name = "askbot"
version = "0.1.0"
authors = ["thomas485"]
edition = "2018"

[dependencies]
reqwest = { version="*", features = ["blocking","json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_any = "*"
twitch-irc = "*"
tokio = "*"
log = "*"
env_logger = "*"
rocket = { version="*", optional = true }
rocket_session = { version="*", optional = true}
rocket_contrib = { version="*", optional = true, features=["json"]}

[features]
default = []
webfrontend = ["rocket","rocket_session","rocket_contrib"]
