[package]
name = "askbot"
version = "0.1.0"
authors = ["thomas485"]
edition = "2021"

[dependencies]
reqwest = { version="*", features = ["blocking","json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_any = "*"
twitch-irc = "5.0"
tokio = "*"
log = "*"
env_logger = "*"
rocket = { version="*", optional = true }
rocket_session = { version="*", optional = true}
rocket_contrib = { version="*", optional = true, features=["json"]}
dialoguer = "*"
anyhow = "*"
youtube-metadata = "*"

[features]
default = []
webfrontend = ["rocket","rocket_session","rocket_contrib"]
